<resources>
    <string name="app_name">Myex</string>
    <string name="hello_world">Hello world!</string>
    <string name="crash_toast_text">Sorry but the application has crashed, please send report to crghostapps@gmail.com</string>
    <string name="title_activity_login">Myex</string>
    <string name="login_1_message">First login, please provide a password.\nThe password will be used to encrypt the data and cannot be changed afterwards</string>
    <string name="login_passwd">Password:</string>
    <string name="login_passwd_err">Please enter a valid password</string>
    <string name="login_passwd_err2">Password not correct !</string>
    <string name="login_check_passwd">Always ask for password at launch</string>
    <string name="login_button">Start</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="action_settings">Settings</string>
    <string name="action_accounts">Accounts</string>
    <string name="action_overflow">More</string>
    <string name="action_costcenters">Cost centers</string>
    <string name="action_debtors">Debtors</string>
    <string name="action_transactions">Transactions</string>
    <string name="action_basicdata">Measures</string>
    <string name="action_export">Exports</string>
    <string name="action_import">Imports</string>
    <string name="action_stats">Statistics</string>
    <string name="action_new_transaction">New transaction</string>
    <string name="action_about">About</string>
    <string name="action_exit">Quit</string>
    <string name="filter_accounts">Select account</string>
    <string name="pref_check_passwd">Always ask for password</string>
    <string name="pref_check_passwd_long">If checked password will be asked at launch</string>
    <string name="pref_username">Your name</string>
    <string name="pref_username_long">Your name will only be used for internal proposes</string>
    <string name="pref_email">Your email adress</string>
    <string name="pref_email_long">For sending your reports, will only be used for internal proposes</string>
    <string name="pref_currency">Currency Symbol</string>
    <string name="currencydefault">€</string>
    <string name="pref_localisation">Use localisation</string>
    <string name="pref_localisation_long">Use localisation to propose expense points</string>
    <string name="pref_language">Application language</string>
    <string name="pref_language_long">The language used in MyEx if diffrent from your phone settings, please restart the application after changeing</string>
    <string-array name="language_array">
        <item>Default</item>
        <item>English (US)</item>
        <item>English (UK)</item>
        <item>French</item>
        <item>German</item>
        <item>Luxembourgish (French)</item>
    </string-array>
    <string-array name="language_value_array">
        <item>"default"</item>
        <item>"en_GB"</item>
        <item>"fr_FR"</item>
        <item>"de_DE"</item>
        <item>"fr_LU"</item>
    </string-array>
    <string name="menu_save">save</string>
    <string name="menu_cancel">cancel</string>
    <string name="menu_delete">delete</string>
    <string name="menu_clean">Clean</string>
    <string name="menu_about">About</string>
    <string name="backpress">Please again to quit</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="prompt_datetime_title">Date and time</string>
    <string name="accounts_title">Accounts</string>
    <string name="accounts_title_new">New account</string>
    <string name="accounts_title_edit">Edit account</string>
    <string name="accounts_empty">Please create a account</string>
    <string name="account_name">Name</string>
    <string name="account_name_error">Please enter a name</string>
    <string name="account_number">Account nummber</string>
    <string name="account_type">Type</string>
    <string name="account_initbalance">Initial balance</string>
    <string name="account_limitamount">Amountlimit</string>
    <string name="account_measure">Currency or Measure</string>
    <string name="account_costcenter">Default costcenter</string>
    <string name="account_delete">Delete account</string>
    <string name="account_clean">Clean account</string>
    <string name="account_delete_confirmation">Are you shure that you want to delete this account?</string>
    <string name="account_delete_confirmation_ri">There are already %1$d transactions attached to %2$s !\nAre you shure that you want to delete this account?</string>
    <string name="account_clean_confirmation">All transactions attached to %1$s will be deleted !\nAre you shure?</string>
    <string name="account_cleaned">%1$s transactions deleted for account %2$s</string>
    <string name="account_deleted">Account deleted</string>
    <string name="account_number_error">Please type a correct value</string>
    <string-array name="account_type_array">
        <item>Wallet</item>
        <item>Bank</item>
        <item>Credit card</item>
        <item>Counter</item>
    </string-array>
    <string name="debtors_title">Debtors</string>
    <string name="debtors_title_new">New debtor</string>
    <string name="debtors_title_edit">Edit debtor</string>
    <string name="debtors_empty">Please create a debtor</string>
    <string name="debtors_name">Name</string>
    <string name="debtors_name_error">Empty name is invalid</string>
    <string name="debtors_longitude">Coordinates longitude</string>
    <string name="debtors_latitude">Coordinates latitude</string>
    <string name="debtors_altitude">Coordinates altitude</string>
    <string name="debtors_delete_confirmation">Are you shure that you want to delete this debtor?</string>
    <string name="debtors_deleted">Debtor deleted</string>
    <string name="debtors_number_error">Please type a correct value</string>
    <string name="costcenters_title">Costcenters</string>
    <string name="costcenters_title_new">New costcenter</string>
    <string name="costcenters_title_edit">Edit costcenter</string>
    <string name="costcenters_empty">Please create a costcenter</string>
    <string name="costcenters_name">Name</string>
    <string name="costcenters_name_error">Empty name is invalid</string>
    <string name="costcenters_parent">Parent</string>
    <string name="costcenters_type">Type</string>
    <string name="costcenters_measures">Additional mesures</string>
    <string name="costcenters_measures_ex">for example Km and Liters for Fuel</string>
    <string name="costcenters_measure1">Mesure 1</string>
    <string name="costcenters_measure2">Mesure 2</string>
    <string name="costcenters_delete_confirmation">Are you shure that you want to delete this costcenter?</string>
    <string name="costcenters_deleted">Costcenter deleted</string>
    <string-array name="costcenter_type_array">
        <item>Income</item>
        <item>Expense</item>
    </string-array>
    <string name="transactions_nearby_title">Near by indicator</string>
    <string name="transactions_nearby_msg_t">Pick near by transaction?</string>
    <string name="transactions_nearby_msg_d">Pick near by debtor?</string>
    <string name="transactions_title">Transactions</string>
    <string name="transactions_title_new">New transaction</string>
    <string name="transactions_title_edit">Edit transaction</string>
    <string name="transactions_empty">Please create a transaction</string>
    <string name="transactions_description">Description</string>
    <string name="transactions_description_error">Please enter a description</string>
    <string name="transactions_date">Date and time</string>
    <string name="transactions_date_error">Please enter a valid date</string>
    <string name="transactions_costcenter">Costcenter</string>
    <string name="transactions_account">Account</string>
    <string name="transactions_debtor">Debtor</string>
    <string name="transactions_measures">Measures</string>
    <string name="transactions_amount">Amount</string>
    <string name="transactions_delete_confirmation">Are you shure that you want to delete this transaction?</string>
    <string name="transactions_deleted">Transaction deleted</string>
    <string name="transactions_ccspinner_root">&lt;Add costcenter&gt;</string>
    <string name="export_title">Exports</string>
    <string name="export_backup">Backup data</string>
    <string name="export_mail_transactions">Transactions sheet</string>
    <string name="export_ok">Task compleated</string>
    <string name="export_error">An error occured</string>
    <string name="import_title">Imports</string>
    <string name="import_restore">Restore data</string>
    <string name="import_bankfile">Import bank flow</string>
    <string name="import_filedialog_title">Please select a file to restore</string>
    <string name="import_confirm_restore">WARNING!</string>
    <string name="import_confirm_restore_message">All your data will be DELETED! and replaced by this restore, are you really shure?</string>
    <string name="import_restore_error">An error occured while restoring, changes rolled back</string>
    <string name="import_restore_ok">All data restored, please restart application</string>
    <string name="bk_title">Select tables to export:</string>
    <string name="bk_accounts">Accounts</string>
    <string name="bk_costcenters">Costcenters</string>
    <string name="bk_debtors">Debtors</string>
    <string name="bk_measures">Measures</string>
    <string name="bk_transactions">Transactions</string>
    <string name="bk_key">Encrypt? and password</string>
    <string name="bk_local">Copy backup to</string>
    <string name="bk_localdoc">Public documents folder</string>
    <string name="bk_mail">Mail backup to </string>
    <string name="data_account1">Wallet</string>
    <string name="data_account2">Current account</string>
    <string name="data_measures1_name">Amount EUR</string>
    <string name="data_measures1_short">€</string>
    <string name="data_measures2_name">Kilometers</string>
    <string name="data_measures2_short">KM</string>
    <string name="data_measures3_name">Kilowatt</string>
    <string name="data_measures3_short">KW</string>
    <string name="data_measures4_name">Liters</string>
    <string name="data_measures4_short">LIT</string>
    <string name="data_debitor">No debitor selected</string>
    <string name="data_costcenter_root">Root</string>
    <string name="data_costcenter_expence">Expense</string>
    <string name="data_costcenter_expence_misc">Miscellaneous expense</string>
    <string name="data_costcenter_income">Income</string>
    <string name="data_costcenter_income_misc">Miscellaneous income</string>
    <string name="stats_title">Statistics</string>
    <string name="measures_none">&lt;none&gt;</string>
    <string name="measures_title">Measures/Currencies</string>
    <string name="measures_new">Add measure/currency</string>
    <string name="measures_edit">Edit measure/currency</string>
    <string name="measures_name">Name</string>
    <string name="measures_name_error">Please enter a name</string>
    <string name="measures_nameshort">Symbol</string>
    <string name="measures_cost">Cost per measure / Currency rate</string>
    <string name="measures_type">Measure type</string>
    <string name="measures_delete_confirmation">Are you shure that you want to delete this measure?</string>
    <string name="measures_deleted">Measure deleted</string>
    <string-array name="measure_type_array">
        <item>Default currency</item>
        <item>Foreign currency</item>
        <item>Counter</item>
    </string-array>
    <string name="dummytext">Dummy text</string>
    <string name="dummynumber">0,00€</string>
</resources>