<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
           android:id="@+id/action_filter"
           android:icon="@drawable/ic_action_filter"
           android:title="@string/action_filter"
           android:orderInCategory="50"
           android:showAsAction="ifRoom"
    />

    <item
           android:id="@+id/action_search"
           android:icon="@drawable/ic_action_search"
           android:title="@string/action_search"
           android:orderInCategory="100"
           android:showAsAction="ifRoom|collapseActionView"
           android:actionViewClass="android.widget.SearchView"
           />

    <item
           android:id="@+id/action_add"
           android:icon="@drawable/ic_action_add"
           android:title="@string/action_new_transaction"
           android:orderInCategory="120"
           android:showAsAction="ifRoom"/>

    <item
           android:id="@+id/action_basicdata"
           android:title="@string/action_basicdata"
           android:orderInCategory="200"
           android:showAsAction="never"/>

    <item
          android:id="@+id/action_export"
          android:title="@string/action_export"
          android:orderInCategory="250"
          android:showAsAction="never"/>
    
    <item
          android:id="@+id/action_import"
          android:title="@string/action_import"
          android:orderInCategory="250"
          android:showAsAction="never"/>

    <item
         android:id="@+id/action_stats"
         android:title="@string/action_stats"
         android:orderInCategory="260"
         android:showAsAction="never"/>

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="900"
          android:showAsAction="never"/>

    <item android:id="@+id/action_about"
          android:title="@string/action_about"
          android:orderInCategory="910"
          android:showAsAction="never"/>

    <item android:id="@+id/action_exit"
          android:title="@string/action_exit"
          android:orderInCategory="999"
          android:showAsAction="never"/>





</menu>
