<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

      <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_action_search"
            android:title="@string/action_search"
            android:orderInCategory="100"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="android.support.v7.widget.SearchView"
            />

      <item
            android:id="@+id/action_new_transaction"
            android:icon="@drawable/ic_action_add"
            android:title="@string/action_new_transaction"
            android:orderInCategory="120"
            app:showAsAction="ifRoom"
            />

      <item
              android:id="@+id/action_accounts"
              android:title="@string/action_accounts"
              android:orderInCategory="200"
              app:showAsAction="never"
              />

    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:orderInCategory="900"
          app:showAsAction="never"/>
</menu>
