<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="lu.crghost.myex.activities.TransactionsEditActivity">

      <item
              android:id="@+id/action_delete"
              android:icon="@drawable/ic_action_trash"
              android:title="@string/menu_delete"
              android:orderInCategory="100"
              android:showAsAction="ifRoom"
              />

      <item
              android:id="@+id/action_cancel"
              android:icon="@drawable/ic_action_cancel"
              android:title="@string/menu_cancel"
              android:orderInCategory="120"
              android:showAsAction="ifRoom"
              />

      <item
              android:id="@+id/action_save"
              android:icon="@drawable/ic_action_tick"
              android:title="@string/menu_save"
              android:orderInCategory="130"
              android:showAsAction="ifRoom"
              />

</menu>
