<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context="lu.crghost.myex.activities.CostcentersEditActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            >

        <TextView
                android:text="@string/costcenters_parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <Spinner
                android:id="@+id/costcenters_parent"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
        </Spinner>

        <TextView
                android:text="@string/costcenters_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <EditText
                android:id="@+id/costcenters_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                />

        <TextView
                android:text="@string/costcenters_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <Spinner
                android:id="@+id/costcenters_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
        </Spinner>

        <TextView
                android:text="@string/costcenters_measures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                />

        <TextView
                android:text="@string/costcenters_measures_ex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <TextView
                android:text="@string/costcenters_measure1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <Spinner
                android:id="@+id/costcenters_measure1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
        </Spinner>

        <TextView
                android:text="@string/costcenters_measure2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <Spinner
                android:id="@+id/costcenters_measure2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
        </Spinner>


    </LinearLayout>

</ScrollView>
