<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollViewMain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical">

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
    >

        <ImageView
                android:src="@drawable/ic_launcher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                 >
        </ImageView>

        <!-- Text for first login -->
        <TextView
                android:id="@+id/lblinit"
                android:layout_marginTop="25dp"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/login_1_message"
                android:state_enabled="false"
        />

        <TextView
                android:layout_marginTop="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_passwd"
        />

        <EditText
                android:id="@+id/txtpass"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
        />

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_check_passwd"
                android:id="@+id/chkPass" android:layout_marginTop="25dp" android:checked="true"/>
        <Button
                android:id="@+id/btnlogin"
                android:layout_marginTop="25dp"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/login_button"
                android:onClick="actionLogin"
        />

    </LinearLayout>


</ScrollView>
