<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context="lu.crghost.myex.activities.AccountsEditActivity">

    <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:orientation="vertical"
                    >

        <TextView
                android:text="@string/account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <EditText
                android:id="@+id/account_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapSentences"
                />

        <TextView
                android:text="@string/account_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <EditText
                android:id="@+id/account_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                />

        <TextView
                android:text="@string/account_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <Spinner
                android:id="@+id/account_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

        </Spinner>

        <TextView
                android:text="@string/account_initbalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <EditText
                android:id="@+id/account_initbalance"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:gravity="right"/>

        <TextView
                android:text="@string/account_limitamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <EditText
                android:id="@+id/account_limitamount"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:gravity="right"/>

        <TextView
                android:text="@string/account_measure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                />

        <Spinner
                android:id="@+id/account_measure"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
        </Spinner>

        <TextView
                android:id="@+id/account_currencybase"
                android:text="@string/account_currency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
        />

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <EditText
                    android:id="@+id/account_currencyrate"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:gravity="right"
                    android:layout_toLeftOf="@+id/account_currencyname"
                    android:layout_toStartOf="@+id/account_currencyname"
            />

            <EditText
                    android:id="@+id/account_currencyname"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"/>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>