<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        tools:context="lu.crghost.myex.TransactionsEditActivity">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                >

                <TextView
                        android:text="@string/transactions_amount"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <EditText
                                android:id="@+id/transactions_amount"
                                android:inputType="numberDecimal"
                                android:gravity="right"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"/>

                        <TextView
                                android:id="@+id/transactions_currency"
                                android:text="@string/currencydefault"
                                android:layout_gravity="right"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                </LinearLayout>

                <TextView
                        android:text="@string/transactions_description"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <AutoCompleteTextView
                        android:id="@+id/transactions_description"
                        android:inputType="textCapSentences"
                        android:completionThreshold="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>


        </LinearLayout>

</ScrollView>
